[gd_scene load_steps=6 format=3 uid="uid://b41optcwu7dq1"]

[ext_resource type="Script" path="res://survivors_game.gd" id="1_k85di"]
[ext_resource type="PackedScene" uid="uid://snhi2ic3av33" path="res://player.tscn" id="1_qxxi8"]
[ext_resource type="PackedScene" uid="uid://dn3o6qofa1hcq" path="res://pine_tree.tscn" id="2_ufbw7"]
[ext_resource type="PackedScene" uid="uid://cq3tk308hqknj" path="res://mob.tscn" id="4_0cyff"]

[sub_resource type="Curve2D" id="Curve2D_p3fge"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -178, -186, 0, 0, 0, 0, 2159, -190, 0, 0, 0, 0, 2155, 1267, 0, 0, 0, 0, -175, 1269, 0, 0, 0, 0, -178, -186)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_k85di")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1925.0
offset_bottom = 1085.0

[node name="Player" parent="." instance=ExtResource("1_qxxi8")]
position = Vector2(962, 539)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-962, -539)
curve = SubResource("Curve2D_p3fge")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-178, -186)
rotation = -0.00171159

[node name="PineTree" parent="." instance=ExtResource("2_ufbw7")]
position = Vector2(1485, 191)

[node name="PineTree2" parent="." instance=ExtResource("2_ufbw7")]
position = Vector2(1530, 269)

[node name="PineTree3" parent="." instance=ExtResource("2_ufbw7")]
position = Vector2(1431, 243)

[node name="PineTree4" parent="." instance=ExtResource("2_ufbw7")]
position = Vector2(297, 250)

[node name="PineTree5" parent="." instance=ExtResource("2_ufbw7")]
position = Vector2(147, 718)

[node name="PineTree6" parent="." instance=ExtResource("2_ufbw7")]
position = Vector2(1491, 632)

[node name="PineTree7" parent="." instance=ExtResource("2_ufbw7")]
position = Vector2(1199, 876)

[node name="PineTree8" parent="." instance=ExtResource("2_ufbw7")]
position = Vector2(905, 244)

[node name="PineTree9" parent="." instance=ExtResource("2_ufbw7")]
position = Vector2(1677, 946)

[node name="PineTree10" parent="." instance=ExtResource("2_ufbw7")]
position = Vector2(197, 780)

[node name="PineTree11" parent="." instance=ExtResource("2_ufbw7")]
position = Vector2(587, 958)

[node name="Spawn_Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.694118)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200
text = "Game Over"

[node name="Mob" parent="." instance=ExtResource("4_0cyff")]

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Spawn_Timer" to="." method="_on_spawn_timer_timeout"]
